# ConanPackageTest

application/: CMakeLists.txt  conanfile.txt  main.cpp
package1/: CMakeLists.txt  conanfile.py
package1/include/package1/: lib.h
package1/src/: lib.cpp  testlib.cpp
package2/: CMakeLists.txt  conanfile.py
package2/include/package2/: lib.h
package2/src/: lib.cpp
